weather map project, progress

--- a/weather_map.html
+++ b/weather_map.html
@@ -11,6 +11,7 @@
 	<link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet">
 <!--	bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!--	css-->
 	<style>
 		#map{
 			width: 100%;
@@ -18,84 +19,99 @@
 		}
 	</style>
 </head>
+
 <body>
-
-<h1 class="bg-primary text-light">Exercise Weather Map</h1>
-
-<!--searchbar-->
-<!--<div><span id="user_display"></span></div>-->
-<!--<input type="text" id="user_input">-->
-<!--<button id="clickme">Find</button>-->
-
-<!--a giant weather box holding weather boxes-->
-<section id="allWeatherContaiers" class="card d-flex flex-row flex-wrap col-12 w-auto m-auto justify-content-between border-0">
-	<section id="weatherContainer1" class="card">
-		<h2 id="weatherDate1" class="weatherDate card-header">Date Here</h2>
-		<div class="card-body">
-			<p id="weatherTemp1"     class="weatherTemp card-text">temp</p>
-			<p id="weatherDesc1"     class="card-text">description</p>
-			<p id="weatherHumidity1" class="card-text">humidity</p>
-			<p id="weatherWind1"     class="card-text">wind</p>
-			<p id="weatherPressure1" class="card-text">pressure</p>
-		</div>
+	
+	<h1 class="bg-primary text-light">Weather Map</h1>
+	
+	<!--searchbar-->
+	<!--<div><span id="user_display"></span></div>-->
+	<!--<input type="text" id="user_input">-->
+	<!--<button id="clickme">Find</button>-->
+	
+	<!--a giant weather box holding weather boxes-->
+	<section id="allWeatherContaiers" class="card d-flex flex-row col-12 w-auto m-auto justify-content-between border-0">
+	<!--&lt;!&ndash;	weather section1&ndash;&gt;-->
+	<!--	<section id="weatherContainer1" class="card">-->
+	<!--		<h2 id="weatherDate1" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp1"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc1"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity1" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind1"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure1" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section2&ndash;&gt;-->
+	<!--	<section id="weatherContainer2" class="card">-->
+	<!--		<h2 id="weatherDate2" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp2"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc2"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity2" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind2"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure2" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section3&ndash;&gt;-->
+	<!--	<section id="weatherContainer3" class="card">-->
+	<!--		<h2 id="weatherDate3" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp3"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc3"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity3" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind3"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure3" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section4&ndash;&gt;-->
+	<!--	<section id="weatherContainer4" class="card">-->
+	<!--		<h2 id="weatherDate4" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp4"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc4"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity4" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind4"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure4" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section5&ndash;&gt;-->
+	<!--	<section id="weatherContainer5" class="card">-->
+	<!--		<h2 id="weatherDate5" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp5"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc5"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity5" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind5"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure5" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
 	</section>
-	<section id="weatherContainer2" class="card">
-		<h2 id="weatherDate2" class="weatherDate card-header">Date Here</h2>
-		<div class="card-body">
-			<p id="weatherTemp2"     class="weatherTemp card-text">temp</p>
-			<p id="weatherDesc2"     class="card-text">description</p>
-			<p id="weatherHumidity2" class="card-text">humidity</p>
-			<p id="weatherWind2"     class="card-text">wind</p>
-			<p id="weatherPressure2" class="card-text">pressure</p>
-		</div>
-	</section>
-	<section id="weatherContainer3" class="card">
-		<h2 id="weatherDate3" class="weatherDate card-header">Date Here</h2>
-		<div class="card-body">
-			<p id="weatherTemp3"     class="weatherTemp card-text">temp</p>
-			<p id="weatherDesc3"     class="card-text">description</p>
-			<p id="weatherHumidity3" class="card-text">humidity</p>
-			<p id="weatherWind3"     class="card-text">wind</p>
-			<p id="weatherPressure3" class="card-text">pressure</p>
-		</div>
-	</section>
-	<section id="weatherContainer4" class="card">
-		<h2 id="weatherDate4" class="weatherDate card-header">Date Here</h2>
-		<div class="card-body">
-			<p id="weatherTemp4"     class="weatherTemp card-text">temp</p>
-			<p id="weatherDesc4"     class="card-text">description</p>
-			<p id="weatherHumidity4" class="card-text">humidity</p>
-			<p id="weatherWind4"     class="card-text">wind</p>
-			<p id="weatherPressure4" class="card-text">pressure</p>
-		</div>
-	</section>
-	<section id="weatherContainer5" class="card">
-		<h2 id="weatherDate5" class="weatherDate card-header">Date Here</h2>
-		<div class="card-body">
-			<p id="weatherTemp5"     class="weatherTemp card-text">temp</p>
-			<p id="weatherDesc5"     class="card-text">description</p>
-			<p id="weatherHumidity5" class="card-text">humidity</p>
-			<p id="weatherWind5"     class="card-text">wind</p>
-			<p id="weatherPressure5" class="card-text">pressure</p>
-		</div>
-	</section>
-</section>
-<!--the map-->
-<section id="map"></section>
-
-
-
-
-<!--bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!--jQuery-->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<!--mapbox-->
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
-<script src="js/mapbox-geocoder-utils.js"></script>
-<!--keys-->
-<script src="js/keys.js"></script>
-<script>
+	<!--the map-->
+	<section id="map"></section>
+	
+	
+	
+	
+	<!--bootstrap-->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<!--jQuery-->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<!--mapbox-->
+	<script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
+	<script src="js/mapbox-geocoder-utils.js"></script>
+	<!--keys-->
+	<script src="js/keys.js"></script>
+	<script>
+		// // Exercise
+		// // Create a new HTML file called weather_map.html.
+		// // 		As you complete each step, commit your changes and push them to GitHub.
+		// // 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
+		// // 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
+		// // 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
+		// // Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
+		// // Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
+		// // 		As a bonus make sure you can update the marker's position to the new search result.
 	$(document).ready(function() {
 		"use strict";
 		mapboxgl.accessToken = MAPBOX_API_TOKEN;
@@ -114,111 +130,139 @@
 			units: 'imperial'
 		}).done(function (data) {
 			console.log(data);
-			$(data).each(function (i, obj) {
-				$(".weatherTemp").html(
-						"<h2>" + data.daily[i].temp.day + "</h2>"
-				);
-			});
+			var html = "";
+	for(var i = 0; i < 5; i++) {
+		html +=
+		"<section id='weatherContainer1' className='card'>" +
+			"<h2 id='weatherDate1' className='weatherDate card-header'>" + data.daily[i].dt + "</h2>" +
+			"<div className='weatherCard card-body'>" +
+				"<p id='weatherTemp1' className='weatherT card-text'>" + "Temperature: " + "<b>" + data.daily[i].temp.max + "/" + data.daily[i].temp.min  + "</b></p>" +
+				"<p id='weatherDesc1' className='weatherD card-text'>" + "Description: " + "<b>" + data.daily[i].weather[0].description + "</b></p>" +
+				"<p id='weatherHumidity1' className='weatherH card-text'>" + "Humidity: " + "<b>" + data.daily[i].humidity + "</b></p>" +
+				"<p id='weatherWind1' className='weatherW card-text'>" + "Wind: " + "<b>" + data.daily[i].wind_speed + "</b></p>" +
+				"<p id='weatherPressure1' className='weatherP card-text'>" + "Pressure: " + "<b>" + data.daily[i].pressure + "</b></p>" +
+			"</div>" +
+		"</section>"
+	}
+					// "<h4>" + data.daily[i].dt + "</h4>" +
+					// "Temperature: " + data.daily[i].temp.max + "/" + data.daily[i].temp.min  +
+					//
+					// "Description: " + "<h4>" + data.daily[i].weather[i].description + "</h4>" +
+					//
+					// "Humidity: " + "<h4>" + data.daily[i].humidity + "</h4>" +
+					//
+					// "Wind: " + "<h4>" + data.daily[i].wind_speed + "</h4>" +
+					//
+					// "Pressure: " + "<h4>" + data.daily[i].pressure + "</h4>"
+		
+		$("#allWeatherContaiers").html(html);
+		
 		}).fail(function (jqXhr, status, error) {
-			console.log(jqXhr);
-			console.log(status);
-			console.log(error);
+				console.log(jqXhr);
+				console.log(status);
+				console.log(error);
 		});
 	});
-	/** //
-	// 		console.log(data, "--Testing data---", data.daily[0].temp.day);
-	// 		$.each(data, function (index, value){
-	// 			console.log(index, value);
-	// 		});
-	// 			I can now go through the index values...but I'm not sure what to do with this, so I'll try something else.
-	// 			console.log(i + obj)
-	// 		})
-	// 		$("#weatherData").html("<p>" + data.daily[0].temp.day + "</p>"); this works
-	// 		// log 63 from humidity ---it matters that its under this.
-	// 		console.log(data.daily[0].temp.day + " will supposedly be the weather today");
-	//
-	//
-	// 	}).fail(function(jqXhr, status, error) {
-	// 		console.log(jqXhr);
-	// 		console.log(status);
-	// 		console.log(error);
-	// 	});
-	//
-	//
-	//
-	//
-	// 		function createHTML(data)
-	// 	{
-	// 		var html = "";
-	// 		for (var i = 0; i < data.length; i += 1) {
-	// 			html +=
-	// 					"<p>" + data.daily[i].temp.day + "</p>";
-	// 		}
-	// 		return html;
-	// 	};
-	//
-	// 	$.get('https://api.openweathermap.org/data/2.5/onecall', {
-	// 		lat: 29.4252,
-	// 		lon: -98.4916,
-	// 		appid: WEATHER_TOKEN,
-	// 		exclude: 'minutely,hourly,current,alerts',
-	// 		units: 'imperial'
-	// 	}).done(function(data) {
-	// 			$('#weatherData').html(createHTML);
-	// 		})
-	// 				.fail(function (jqXhr, status, error) {
-	// 					console.log(jqXhr);
-	// 					console.log(status);
-	// 					console.log(error);
-	// 				});
-	// });
-	//
-	// // Exercise
-	// // Create a new HTML file called weather_map.html.
-	// // 		As you complete each step, commit your changes and push them to GitHub.
-	// // 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
-	// // 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
-	// // 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
-	// // Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
-	// // Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
-	// // 		As a bonus make sure you can update the marker's position to the new search result.
-	// //
-	//
-	//
-	//
-	//
-	//
-	// // $.get('https://api.openweathermap.org/data/2.5/onecall', {
-	// // 	lat: 29.4252,
-	// // 	lon: -98.4916,
-	// // 	appid: WEATHER_TOKEN,
-	// // 	exclude: 'minutely,hourly,current,alerts',
-	// // 	units: 'imperial'
-	// // }).done(function (data){
-	// // 	console.log(data.daily[0].temp.day);
-	// // 	var weatherText = "";
-	// // 	for(var i = 0; i < data.length; i++){
-	// // 		weatherText += document.getElementById("weatherData").innerHTML =
-	// // 				'<h2>' + data.daily[0].temp.day + '</h2>';
-	// // 	}
-	// // 	$("#weatherData").html(weatherText)
-	// //
-	//
-	// 	// console.log(data.daily[0].dt);
-	// 	//
-	// 	// $("#weatherData").html(data.daily[0].dt);
-	//
-	// 	// console.log(($("#insert-weather-data").html(html));
-	// 	// log 63 from humidity ---it matters that its under this.
-	//
-	// 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
-	//
-	//
-	// // $('#clickme').click(function(){
-	// // 	$('#user_display').html($('#user_input').val());
-	// //
-	// // }); **/
-	
-</script>
+				//https://java.codeup.com/img/5day-forecast-map.png
+				//https://api.jquery.com/jquery.each/
+			// 	$.each(data, function (index, value){
+			// 					console.log(index, value);
+			// // 	$(data).each(function (i, obj) {
+			// //
+			
+			// // 	});
+			// }).fail(function (jqXhr, status, error) {
+			// 		console.log(jqXhr);
+			// 		console.log(status);
+			// 		console.log(error);
+			// });
+			
+			
+		/** //
+		// 		console.log(data, "--Testing data---", data.daily[0].temp.day);
+		// 		$.each(data, function (index, value){
+		// 			console.log(index, value);
+		// 		});
+		// 			I can now go through the index values...but I'm not sure what to do with this, so I'll try something else.
+		// 			console.log(i + obj)
+		// 		})
+		// 		$("#weatherData").html("<p>" + data.daily[0].temp.day + "</p>"); this works
+		// 		// log 63 from humidity ---it matters that its under this.
+		// 		console.log(data.daily[0].temp.day + " will supposedly be the weather today");
+		//
+		//
+		// 	}).fail(function(jqXhr, status, error) {
+		// 		console.log(jqXhr);
+		// 		console.log(status);
+		// 		console.log(error);
+		// 	});
+		//
+		//
+		//
+		//
+		// 		function createHTML(data)
+		// 	{
+		// 		var html = "";
+		// 		for (var i = 0; i < data.length; i += 1) {
+		// 			html +=
+		// 					"<p>" + data.daily[i].temp.day + "</p>";
+		// 		}
+		// 		return html;
+		// 	};
+		//
+		// 	$.get('https://api.openweathermap.org/data/2.5/onecall', {
+		// 		lat: 29.4252,
+		// 		lon: -98.4916,
+		// 		appid: WEATHER_TOKEN,
+		// 		exclude: 'minutely,hourly,current,alerts',
+		// 		units: 'imperial'
+		// 	}).done(function(data) {
+		// 			$('#weatherData').html(createHTML);
+		// 		})
+		// 				.fail(function (jqXhr, status, error) {
+		// 					console.log(jqXhr);
+		// 					console.log(status);
+		// 					console.log(error);
+		// 				});
+		// });
+		//
+		// //
+		//
+		//
+		//
+		//
+		//
+		// // $.get('https://api.openweathermap.org/data/2.5/onecall', {
+		// // 	lat: 29.4252,
+		// // 	lon: -98.4916,
+		// // 	appid: WEATHER_TOKEN,
+		// // 	exclude: 'minutely,hourly,current,alerts',
+		// // 	units: 'imperial'
+		// // }).done(function (data){
+		// // 	console.log(data.daily[0].temp.day);
+		// // 	var weatherText = "";
+		// // 	for(var i = 0; i < data.length; i++){
+		// // 		weatherText += document.getElementById("weatherData").innerHTML =
+		// // 				'<h2>' + data.daily[0].temp.day + '</h2>';
+		// // 	}
+		// // 	$("#weatherData").html(weatherText)
+		// //
+		//
+		// 	// console.log(data.daily[0].dt);
+		// 	//
+		// 	// $("#weatherData").html(data.daily[0].dt);
+		//
+		// 	// console.log(($("#insert-weather-data").html(html));
+		// 	// log 63 from humidity ---it matters that its under this.
+		//
+		// 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
+		//
+		//
+		// // $('#clickme').click(function(){
+		// // 	$('#user_display').html($('#user_input').val());
+		// //
+		// // }); **/
+		
+	</script>
 </body>
 </html>
