--- a/weather_map.html
+++ b/weather_map.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--	weather-->
 
-<!--	mapbox-->
+<!--	mapbox / geocode-->
 	<link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet">
+	<script src="js/mapbox-geocoder-utils.js"></script>
 <!--	bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!--	css-->
@@ -23,76 +24,19 @@
 <body>
 	<h1 class="bg-primary text-light">Weather Map</h1>
 	<!--searchbar-->
-	<!--<div><span id="user_display"></span></div>-->
-	<!--<input type="text" id="user_input">-->
-	<!--<button id="clickme">Find</button>-->
+	<div><span id="user_display"></span></div>
+	<label>Place:</label>
+	<input type="text" id="user_input">
+	<button id="clickme">Find</button>
+	
 	
 	<!--a giant weather box holding weather boxes-->
-	<section id="allWeatherContaiers" class="d-flex flex-row flex-wrap col-12 w-auto m-auto justify-content-evenly border-0 bg-light">
-	<!--		$("#allWeatherContaiers").html(html);-->
+	<section id="allWeatherContaiers"
+	         class="d-flex flex-row flex-wrap col-6 w-auto m-auto justify-content-evenly border-0 bg-light">
+	<!--	      ^----$("#allWeatherContaiers").html(html);-->
 	</section>
-<!--	-->
-	<!--&lt;!&ndash;	weather section1&ndash;&gt;-->
-	<!--	<section id="weatherContainer1" class="card">-->
-	<!--		<h2 id="weatherDate1" class="weatherDate card-header">Date Here</h2>-->
-	<!--		<div class="card-body">-->
-	<!--			<p id="weatherTemp1"     class="weatherT card-text">temp</p>-->
-	<!--			<p id="weatherDesc1"     class="weatherD card-text">description</p>-->
-	<!--			<p id="weatherHumidity1" class="weatherH card-text">humidity</p>-->
-	<!--			<p id="weatherWind1"     class="weatherW card-text">wind</p>-->
-	<!--			<p id="weatherPressure1" class="weatherP card-text">pressure</p>-->
-	<!--		</div>-->
-	<!--	</section>-->
-	<!--&lt;!&ndash;	weather section2&ndash;&gt;-->
-	<!--	<section id="weatherContainer2" class="card">-->
-	<!--		<h2 id="weatherDate2" class="weatherDate card-header">Date Here</h2>-->
-	<!--		<div class="card-body">-->
-	<!--			<p id="weatherTemp2"     class="weatherT card-text">temp</p>-->
-	<!--			<p id="weatherDesc2"     class="weatherD card-text">description</p>-->
-	<!--			<p id="weatherHumidity2" class="weatherH card-text">humidity</p>-->
-	<!--			<p id="weatherWind2"     class="weatherW card-text">wind</p>-->
-	<!--			<p id="weatherPressure2" class="weatherP card-text">pressure</p>-->
-	<!--		</div>-->
-	<!--	</section>-->
-	<!--&lt;!&ndash;	weather section3&ndash;&gt;-->
-	<!--	<section id="weatherContainer3" class="card">-->
-	<!--		<h2 id="weatherDate3" class="weatherDate card-header">Date Here</h2>-->
-	<!--		<div class="card-body">-->
-	<!--			<p id="weatherTemp3"     class="weatherT card-text">temp</p>-->
-	<!--			<p id="weatherDesc3"     class="weatherD card-text">description</p>-->
-	<!--			<p id="weatherHumidity3" class="weatherH card-text">humidity</p>-->
-	<!--			<p id="weatherWind3"     class="weatherW card-text">wind</p>-->
-	<!--			<p id="weatherPressure3" class="weatherP card-text">pressure</p>-->
-	<!--		</div>-->
-	<!--	</section>-->
-	<!--&lt;!&ndash;	weather section4&ndash;&gt;-->
-	<!--	<section id="weatherContainer4" class="card">-->
-	<!--		<h2 id="weatherDate4" class="weatherDate card-header">Date Here</h2>-->
-	<!--		<div class="card-body">-->
-	<!--			<p id="weatherTemp4"     class="weatherT card-text">temp</p>-->
-	<!--			<p id="weatherDesc4"     class="weatherD card-text">description</p>-->
-	<!--			<p id="weatherHumidity4" class="weatherH card-text">humidity</p>-->
-	<!--			<p id="weatherWind4"     class="weatherW card-text">wind</p>-->
-	<!--			<p id="weatherPressure4" class="weatherP card-text">pressure</p>-->
-	<!--		</div>-->
-	<!--	</section>-->
-	<!--&lt;!&ndash;	weather section5&ndash;&gt;-->
-	<!--	<section id="weatherContainer5" class="card">-->
-	<!--		<h2 id="weatherDate5" class="weatherDate card-header">Date Here</h2>-->
-	<!--		<div class="card-body">-->
-	<!--			<p id="weatherTemp5"     class="weatherT card-text">temp</p>-->
-	<!--			<p id="weatherDesc5"     class="weatherD card-text">description</p>-->
-	<!--			<p id="weatherHumidity5" class="weatherH card-text">humidity</p>-->
-	<!--			<p id="weatherWind5"     class="weatherW card-text">wind</p>-->
-	<!--			<p id="weatherPressure5" class="weatherP card-text">pressure</p>-->
-	<!--		</div>-->
-	<!--	</section>-->
 	<!--the map-->
-	<section id="map"></section>
-	
-	
-	
-	
+	<section id="map"class="d-flex flex-row-reverse"></section>
 	<!--bootstrap-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<!--jQuery-->
@@ -103,24 +47,41 @@
 	<!--keys-->
 	<script src="js/keys.js"></script>
 	<script>
-		// // Exercise
-		// // Create a new HTML file called weather_map.html.
-		// // 		As you complete each step, commit your changes and push them to GitHub.
-		// // 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
-		// // 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
-		// // 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
-		// // Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
-		// // Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
-		// // 		As a bonus make sure you can update the marker's position to the new search result.
-	$(document).ready(function() {
-		"use strict";
+// // Exercise
+// // Create a new HTML file called weather_map.html.
+// // 		As you complete each step, commit your changes and push them to GitHub.
+// // 		Using HTML, CSS, jQuery, AJAX, and the OpenWeatherMap API, start by showing the current conditions for city you live in on your page.
+// // 		Update your layout and AJAX request(s) to display a five day forecast for the city you live in that looks like the screenshot below.
+// // 		If you want to add the icons the URLs for OpenWeatherMap's icons are formatted like: http://openweathermap.org/img/w/[icon].png where [icon] comes from the API response.
+// // Refer to your Mapbox API exercise. Recreate the map below your 5 day forecast. Read through the documentation for the Mapbox API and figure out how to allow the user to drop a pin on any place on the map. Once the user drops a pin, grab its coordinates and feed those into your OpenWeatherMap API. Update the five-day forecast with the information from those coordinates (you should also get rid of your input boxes at this point).
+// // Add a Mapbox text input to search by location and have the forecast update when a new location is searched.
+// // 		As a bonus make sure you can update the marker's position to the new search result.
+$(document).ready(function() {
+	"use strict";
+	$('#clickme').click(function(){
+		$('#user_display').html($('#user_input').val());
+		
+	})
 		mapboxgl.accessToken = MAPBOX_API_TOKEN;
 		const map = new mapboxgl.Map({
 			container: 'map', // container ID
 			style: 'mapbox://styles/mapbox/streets-v11', // style URL
-			center: [-74.5, 40], // starting position [lng, lat]
+			center: [-98.4916, 29.4252], // starting position [lng, lat]
 			zoom: 9 // starting zoom
 		});
+	
+	// Create a default Marker and add it to the map.
+	const marker1 = new mapboxgl.Marker()
+			.setLngLat([-98.4916, 29.4252])
+			.addTo(map);
+
+// Create a default Marker, colored black, rotated 45 degrees.
+	const marker2 = new mapboxgl.Marker({ color: 'black', rotation: 45 })
+			.setLngLat([-74.5, 40])
+			.addTo(map);
+		
+		
+		//weather data code bellow;
 		$.get('https://api.openweathermap.org/data/2.5/onecall', {
 			lat: 29.4252,
 			lon: -98.4916,
@@ -130,7 +91,7 @@
 		}).done(function (data) {
 			console.log(data);
 			var html = "";
-	for(var i = 0; i < 5; i++) {
+		for(var i = 0; i < 5; i++) {
 		html +=
 		"<section id='weatherContainer1' class='card text-dark bg-light mb-3' style='max-width: 18rem;'>" +
 			"<h2 id='weatherDate1' className='card-header'>" + data.daily[i].dt + "</h2>" +
@@ -164,7 +125,8 @@
 				console.log(status);
 				console.log(error);
 		});
-	});
+});
+//trial and errors ->
 //<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
 // 		<div class="card-header">Header</div>
 // 		<div class="card-body">
@@ -257,10 +219,62 @@
 // // 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
 // //
 // //
-// // // $('#clickme').click(function(){
-// // // 	$('#user_display').html($('#user_input').val());
-// // //
-// // // });//
 	</script>
 </body>
 </html>
+<!--	trail and errors-->
+	<!--&lt;!&ndash;	weather section1&ndash;&gt;-->
+	<!--	<section id="weatherContainer1" class="card">-->
+	<!--		<h2 id="weatherDate1" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp1"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc1"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity1" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind1"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure1" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section2&ndash;&gt;-->
+	<!--	<section id="weatherContainer2" class="card">-->
+	<!--		<h2 id="weatherDate2" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp2"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc2"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity2" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind2"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure2" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section3&ndash;&gt;-->
+	<!--	<section id="weatherContainer3" class="card">-->
+	<!--		<h2 id="weatherDate3" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp3"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc3"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity3" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind3"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure3" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section4&ndash;&gt;-->
+	<!--	<section id="weatherContainer4" class="card">-->
+	<!--		<h2 id="weatherDate4" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp4"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc4"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity4" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind4"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure4" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
+	<!--&lt;!&ndash;	weather section5&ndash;&gt;-->
+	<!--	<section id="weatherContainer5" class="card">-->
+	<!--		<h2 id="weatherDate5" class="weatherDate card-header">Date Here</h2>-->
+	<!--		<div class="card-body">-->
+	<!--			<p id="weatherTemp5"     class="weatherT card-text">temp</p>-->
+	<!--			<p id="weatherDesc5"     class="weatherD card-text">description</p>-->
+	<!--			<p id="weatherHumidity5" class="weatherH card-text">humidity</p>-->
+	<!--			<p id="weatherWind5"     class="weatherW card-text">wind</p>-->
+	<!--			<p id="weatherPressure5" class="weatherP card-text">pressure</p>-->
+	<!--		</div>-->
+	<!--	</section>-->
