JavaScript practice for exams, reviewing old JS problems

--- a/2-JSPractice.html
+++ b/2-JSPractice.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JSPracticeFEB-</title>
+    <title>JS Things 2/3 (:-</title>
 </head>
 <body>
-<script src="js/practiceFEB2022.js"></script>
+
+
+<script src="js/2-JSPractice.js"></script>
 </body>
 </html>
