JavaScript practice for exams, reviewing old JS problems

--- a/3-JSPractice.html
+++ b/3-JSPractice.html
@@ -44,24 +44,70 @@
 	"use strict";
 	// Exercise 50
 	// Write a function definition named first that takes in sequence and returns the first value of that sequence.
-	function first(sequence){
-		if (typeof sequence == "string") {
-			var idk = "";
-			var idk2 = "";
-			sequence.split("").forEach(function (value, index, array) {
-				if (index == "0") idk = value;
-			});
-			return idk;
-		} else {
-			sequence.forEach(function (value, index, array) {
-				if (index == "0") idk2 = value;
-			});
-			return idk2;
+	// function first(sequence){
+	// 	if (typeof sequence == "string") {
+	// 		var sequenceThatWasAString = "";
+	// 		var sequenceThatWasNotAString = "";
+	// 		sequence.split("").forEach(function (value, index, array) {
+	// 			if (index == "0") sequenceThatWasAString = value;
+	// 		});
+	// 		return sequenceThatWasAString;
+	// 	} else {
+	// 		sequence.forEach(function (value, index, array) {
+	// 			if (index == "0") sequenceThatWasNotAString = value;
+	// 		});
+	// 		return sequenceThatWasNotAString;
+	// 	}
+	// }
+	// console.log(first("ubuntu"), "--u", "Exercise 50");
+	// console.log(first([1, 2, 3]), "--1", "Exercise 50");
+	// console.log(first(["JS", "is", "awesome"]), "--JS", "Exercise 50");
+	// function forth(sequence){
+	// 	var string= "";
+	// 	var array= "";
+	// 	if (typeof sequence !== "string") {
+	// 		sequence.forEach(function(value,index){
+	// 			if (index == "3") {array = value;}
+	// 		}); return array;
+	// 	} else {
+	// 		sequence.split("").forEach(function(value,index){
+	// 			if (index == "3") {string = value;}
+	// 		}); return string;
+	// 	}
+	// }
+	
+	// Exercise 54
+	// Write a function definition named last that takes in sequence and returns the last value of that sequence.
+	
+		// var becauseItWasAString = "";
+		// var becauseItWasAnArray = "";
+		// if (typeof sequence !== "string" ||
+		// 	typeof sequence !==	"number"){
+		// 	sequence.forEach(function(value, index){
+		// 		if (sequence.endsWith(value)){
+		//
+		// 		}
+		// 	});
+		// 	return becauseItWasAnArray;
+		// } else {
+		//
+		// };
+	function last(sequence){
+		if (typeof sequence !== "string"){
+			return sequence.pop();
+		}
+		else {
+			return sequence.split("").pop();
 		}
 	}
-	console.log(first("ubuntu"), "--u", "Exercise 50");
-	console.log(first([1, 2, 3]), "--1", "Exercise 50");
-	console.log(first(["JS", "is", "awesome"]), "--JS", "Exercise 50");
+	console.log(last("ubuntu"), "u", "Exercise 54");
+	console.log(last("1234"), "u", "Exercise 54");
+	
+	console.log(last([1, 2, 3, 4]), 4, "Exercise 54");
+	console.log(last(["JS", "is", "awesome"]), "awesome", "Exercise 54");
+	console.log(last(["kiwi", "mango", "guava"]), "guava", "Exercise 54");
+	
+	
 </script>
 </body>
 </html>
