organizing the code.

--- a/weather_map.html
+++ b/weather_map.html
@@ -126,102 +126,102 @@ $(document).ready(function() {
 				console.log(error);
 		});
 });
-//trial and errors ->
-//<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">
-// 		<div class="card-header">Header</div>
-// 		<div class="card-body">
-// 			<h5 class="card-title">Light card title</h5>
-// 			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-// 		</div>
-// "<h4>" + data.daily[i].dt + "</h4>" +
-// "Temperature: " + data.daily[i].temp.max + "/" + data.daily[i].temp.min  +
-//
-// "Description: " + "<h4>" + data.daily[i].weather[i].description + "</h4>" +
-//
-// "Humidity: " + "<h4>" + data.daily[i].humidity + "</h4>" +
-//
-// "Wind: " + "<h4>" + data.daily[i].wind_speed + "</h4>" +
-//
-// "Pressure: " + "<h4>" + data.daily[i].pressure + "</h4>"
-//https://java.codeup.com/img/5day-forecast-map.png
-//https://api.jquery.com/jquery.each/
-// 	$.each(data, function (index, value){
-// 					console.log(index, value);
-// // 	$(data).each(function (i, obj) {
-// // 	});
-// }).fail(function (jqXhr, status, error) {
-// 		console.log(jqXhr);
-// 		console.log(status);
-// 		console.log(error);
-// });
-// // 		console.log(data, "--Testing data---", data.daily[0].temp.day);
-// // 		$.each(data, function (index, value){
-// // 			console.log(index, value);
-// // 		});
-// // 			I can now go through the index values...but I'm not sure what to do with this, so I'll try something else.
-// // 			console.log(i + obj)
-// // 		})
-// // 		$("#weatherData").html("<p>" + data.daily[0].temp.day + "</p>"); this works
-// // 		// log 63 from humidity ---it matters that its under this.
-// // 		console.log(data.daily[0].temp.day + " will supposedly be the weather today");
-// //
-// //
-// // 	}).fail(function(jqXhr, status, error) {
-// // 		console.log(jqXhr);
-// // 		console.log(status);
-// // 		console.log(error);
-// // 	});
-// // 		function createHTML(data)
-// // 	{
-// // 		var html = "";
-// // 		for (var i = 0; i < data.length; i += 1) {
-// // 			html +=
-// // 					"<p>" + data.daily[i].temp.day + "</p>";
-// // 		}
-// // 		return html;
-// // 	};
-// // 	$.get('https://api.openweathermap.org/data/2.5/onecall', {
-// // 		lat: 29.4252,
-// // 		lon: -98.4916,
-// // 		appid: WEATHER_TOKEN,
-// // 		exclude: 'minutely,hourly,current,alerts',
-// // 		units: 'imperial'
-// // 	}).done(function(data) {
-// // 			$('#weatherData').html(createHTML);
-// // 		})
-// // 				.fail(function (jqXhr, status, error) {
-// // 					console.log(jqXhr);
-// // 					console.log(status);
-// // 					console.log(error);
-// // 				});
-// // });
-// // // $.get('https://api.openweathermap.org/data/2.5/onecall', {
-// // // 	lat: 29.4252,
-// // // 	lon: -98.4916,
-// // // 	appid: WEATHER_TOKEN,
-// // // 	exclude: 'minutely,hourly,current,alerts',
-// // // 	units: 'imperial'
-// // // }).done(function (data){
-// // // 	console.log(data.daily[0].temp.day);
-// // // 	var weatherText = "";
-// // // 	for(var i = 0; i < data.length; i++){
-// // // 		weatherText += document.getElementById("weatherData").innerHTML =
-// // // 				'<h2>' + data.daily[0].temp.day + '</h2>';
-// // // 	}
-// // // 	$("#weatherData").html(weatherText)
-// // 	// console.log(data.daily[0].dt);
-// // 	//
-// // 	// $("#weatherData").html(data.daily[0].dt);
-// //
-// // 	// console.log(($("#insert-weather-data").html(html));
-// // 	// log 63 from humidity ---it matters that its under this.
-// //
-// // 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");
-// //
-// //
 	</script>
 </body>
 </html>
+<!--//trial and errors ->-->
+<!--//<div class="card text-dark bg-light mb-3" style="max-width: 18rem;">-->
+<!--// 		<div class="card-header">Header</div>-->
+<!--// 		<div class="card-body">-->
+<!--// 			<h5 class="card-title">Light card title</h5>-->
+<!--// 			<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
+<!--// 		</div>-->
+<!--// "<h4>" + data.daily[i].dt + "</h4>" +-->
+<!--// "Temperature: " + data.daily[i].temp.max + "/" + data.daily[i].temp.min  +-->
+<!--//-->
+<!--// "Description: " + "<h4>" + data.daily[i].weather[i].description + "</h4>" +-->
+<!--//-->
+<!--// "Humidity: " + "<h4>" + data.daily[i].humidity + "</h4>" +-->
+<!--//-->
+<!--// "Wind: " + "<h4>" + data.daily[i].wind_speed + "</h4>" +-->
+<!--//-->
+<!--// "Pressure: " + "<h4>" + data.daily[i].pressure + "</h4>"-->
+<!--//https://java.codeup.com/img/5day-forecast-map.png-->
+<!--//https://api.jquery.com/jquery.each/-->
+<!--// 	$.each(data, function (index, value){-->
+<!--// 					console.log(index, value);-->
+<!--// // 	$(data).each(function (i, obj) {-->
+<!--// // 	});-->
+<!--// }).fail(function (jqXhr, status, error) {-->
+<!--// 		console.log(jqXhr);-->
+<!--// 		console.log(status);-->
+<!--// 		console.log(error);-->
+<!--// });-->
+<!--// // 		console.log(data, "&#45;&#45;Testing data-&#45;&#45;", data.daily[0].temp.day);-->
+<!--// // 		$.each(data, function (index, value){-->
+<!--// // 			console.log(index, value);-->
+<!--// // 		});-->
+<!--// // 			I can now go through the index values...but I'm not sure what to do with this, so I'll try something else.-->
+<!--// // 			console.log(i + obj)-->
+<!--// // 		})-->
+<!--// // 		$("#weatherData").html("<p>" + data.daily[0].temp.day + "</p>"); this works-->
+<!--// // 		// log 63 from humidity -&#45;&#45;it matters that its under this.-->
+<!--// // 		console.log(data.daily[0].temp.day + " will supposedly be the weather today");-->
+<!--// //-->
+<!--// //-->
+<!--// // 	}).fail(function(jqXhr, status, error) {-->
+<!--// // 		console.log(jqXhr);-->
+<!--// // 		console.log(status);-->
+<!--// // 		console.log(error);-->
+<!--// // 	});-->
+<!--// // 		function createHTML(data)-->
+<!--// // 	{-->
+<!--// // 		var html = "";-->
+<!--// // 		for (var i = 0; i < data.length; i += 1) {-->
+<!--// // 			html +=-->
+<!--// // 					"<p>" + data.daily[i].temp.day + "</p>";-->
+<!--// // 		}-->
+<!--// // 		return html;-->
+<!--// // 	};-->
+<!--// // 	$.get('https://api.openweathermap.org/data/2.5/onecall', {-->
+<!--// // 		lat: 29.4252,-->
+<!--// // 		lon: -98.4916,-->
+<!--// // 		appid: WEATHER_TOKEN,-->
+<!--// // 		exclude: 'minutely,hourly,current,alerts',-->
+<!--// // 		units: 'imperial'-->
+<!--// // 	}).done(function(data) {-->
+<!--// // 			$('#weatherData').html(createHTML);-->
+<!--// // 		})-->
+<!--// // 				.fail(function (jqXhr, status, error) {-->
+<!--// // 					console.log(jqXhr);-->
+<!--// // 					console.log(status);-->
+<!--// // 					console.log(error);-->
+<!--// // 				});-->
+<!--// // });-->
+<!--// // // $.get('https://api.openweathermap.org/data/2.5/onecall', {-->
+<!--// // // 	lat: 29.4252,-->
+<!--// // // 	lon: -98.4916,-->
+<!--// // // 	appid: WEATHER_TOKEN,-->
+<!--// // // 	exclude: 'minutely,hourly,current,alerts',-->
+<!--// // // 	units: 'imperial'-->
+<!--// // // }).done(function (data){-->
+<!--// // // 	console.log(data.daily[0].temp.day);-->
+<!--// // // 	var weatherText = "";-->
+<!--// // // 	for(var i = 0; i < data.length; i++){-->
+<!--// // // 		weatherText += document.getElementById("weatherData").innerHTML =-->
+<!--// // // 				'<h2>' + data.daily[0].temp.day + '</h2>';-->
+<!--// // // 	}-->
+<!--// // // 	$("#weatherData").html(weatherText)-->
+<!--// // 	// console.log(data.daily[0].dt);-->
+<!--// // 	//-->
+<!--// // 	// $("#weatherData").html(data.daily[0].dt);-->
+<!--// //-->
+<!--// // 	// console.log(($("#insert-weather-data").html(html));-->
+<!--// // 	// log 63 from humidity -&#45;&#45;it matters that its under this.-->
+<!--// //-->
+<!--// // 	// console.log(data.daily[0].feels_like.day.toFixed(0) + " will supposedly be the weather today");-->
+<!--// //-->
+<!--// //-->
 <!--	trail and errors-->
 	<!--&lt;!&ndash;	weather section1&ndash;&gt;-->
 	<!--	<section id="weatherContainer1" class="card">-->
