--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+<!--	mobile view-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>First Map</title>
+<!--	bootstrap-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!--	mapbox-->
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css' rel='stylesheet' />
 	<style>
 		#map {
@@ -29,6 +32,7 @@
 <section id='map' class="card m-auto mt-5"></section>
 <button id="zoom-in" class="d-flex m-auto mt-2">Zoom</button>
 
+<!--mapbox scripts/ geocoder-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js'></script>
 <script src="js/mapbox-geocoder-utils.js"></script>
