--- a/1-js-warmups.html
+++ b/1-js-warmups.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8">
     <title>JS Warmups</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style>
+		#square {
+			width: 50vmax;
+			height: 50vmax;
+			background-color: rebeccapurple;
+		}
+	</style>
 </head>
 <body>
+
+<div id="square" class="square m-auto mt-5"></div>
+
+<div class="container d-flex justify-content-center  m-auto mt-5">
+<!--	change color button-->
+<button id ="changeSquareColor" class="rounded-pill">square color change</button><br>
+<!--	//reset button-->
+<button id ="resetSquareColor" class="rounded-pill">Reset</button>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
+</div>
 <script src="js/js-warmups.js"></script>
 <script>
+	
+	//vanilla js:
+	var changeColorButton = document.getElementById("changeSquareColor");
+	changeColorButton.addEventListener('click', function(){
+	document.getElementById("square").style.backgroundColor = "pink";
+	}); // changes color ---^
+	//---v resets:
+	var resetColor = document.getElementById("resetSquareColor");
+	resetColor.addEventListener('click', function(){
+	
+	})
+	
+	
+	//jQuery:
+	$("#changeSquareColor").click(function (){
+		$("#square").css("background-color", "yellow");
+	}); // changes color---^
+	//resets--v:
+	$("#resetSquareColor").on("click", function (){
+		location.reload();
+	})
+	// $("#resetSquareColor").click(function (){
+	// 	$("#square").removeClass("background-color", "yellow");
+	// })
+	
 	
 // 	// //make the browser ask a question and return the message based on the answer.
 // 	//
@@ -398,20 +439,21 @@ var nums4 = [-3, -10]; // countNegatives(nums4) returns 2
 // 	return number.length;
 // };
 
-function countNegatives(nums){
-	var negativescount = 0;
-	nums.forEach(function(nums){
-		if (nums < 0){
-			negativescount++;
-		}
-		});
-return negativescount
-};
-	
-console.log(countNegatives(nums1));
-console.log(countNegatives(nums2));
-console.log(countNegatives(nums3));
-console.log(countNegatives(nums4));
+// function countNegatives(nums){
+// 	var negativescount = 0;
+// 	nums.forEach(function(nums){
+// 		if (nums < 0){
+// 			negativescount++;
+// 		}
+// 		});
+// return negativescount
+// };
+//
+// console.log(countNegatives(nums1));
+// console.log(countNegatives(nums2));
+// console.log(countNegatives(nums3));
+// console.log(countNegatives(nums4));
+
 
 
 </script>
