arrow functions, const and let

--- a/js-es6-lecture.html
+++ b/js-es6-lecture.html
@@ -123,6 +123,11 @@
 	const outputCar = ({make, model, year, mileage, owner: {firstName, lastName}, color} = car) =>
 	`I see a ${color} ${year} ${make} ${model} with ${mileage} miles owned by ${firstName}.`;
 	
+	const dogNames = ["coco", "spike", "rain", "chiquita"]
+	for (const name of dogNames) {
+		console.log(`${name} is the name of my dog`);
+	};
+	
 </script>
 </body>
 </html>
