--- a/es6.html
+++ b/es6.html
@@ -30,6 +30,38 @@
 	setTimeout(() => textArtExperiment.innerHTML += 's', 2700);
 	setTimeout(() => textArtExperiment.innerHTML += 'e', 2800);
 	setTimeout(() => textArtExperiment.innerHTML += 's', 2900);
+	setTimeout(() => textArtExperiment.innerHTML += '<span>' + '_szfzdfsf' +
+			'</span>', 2900);
+	
+	
+	
+	const blink = document.getElementById().style.opacity = "0.5"
+	// setInterval(function (){
+	// 	ops = (ops < 1) ? 1:0;
+	// 	blink.style.opacity=ops;
+	// },500);
+	
+	// var el = document.getElementById("div1");
+	//
+	// function fadeIn(blink, time) {
+	// 	blink.style.opacity = 0;
+	//
+	// 	const last = +new Date();
+	// 	const tick = function() {
+	// 		blink.style.opacity = +el.style.opacity + (new Date() - last) / time;
+	// 		last = +new Date();
+	//
+	// 		if (+blink.style.opacity < 1) {
+	// 			(window.requestAnimationFrame && requestAnimationFrame(tick)) || setTimeout(tick, 16);
+	// 		}
+	// 	};
+	//
+	// 	tick();
+	// }
+	//
+	// fadeIn(el, 3000);
+	
+	
 	
 	// setTimeout(() => console.log('Love never fails.'), 2000);
 	// setTimeout(() => console.log('..... (¯`v´¯)♥'), 2100)
