--- a/weather_map.html
+++ b/weather_map.html
@@ -27,15 +27,14 @@
 	<button id="clickme">Find</button>
 	</section>
 	
-	<!--a giant weather box holding weather boxes-->
-	<div class="d-flex flex-column">
-	<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center mb-0 pb-0">
+	<!-- holding weather boxes-->
+	<section id="allWeatherContaiers" class="allWeatherContaiers text-sm-center">
 	<!--	      ^----$("#allWeatherContaiers").html(html);-->
-	
 	</section>
-	<!--the map-->
-	<div id="map"></div>
-	</div>
+	<!--the map, it was difficult to center outside of bootstrap.-->
+	<div id="map" class="m-auto mt-3 mb-3"></div>
+	
+	
 	
 	<!--bootstrap-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -93,7 +92,7 @@ $(document).ready(function() {
 			
 		html +=
 		"<section class='everyCard'>" +
-			"<h2>" + date1 + "</h2>" +
+			"<span>" + date1 + "</span>" +
 				"<span>" + "Temperature: " + "</span>" + "<b>" + parseInt(data.daily[i].temp.max) + "<span>" + "/" +
 				"</span>" +
 				parseInt(data.daily[i].temp.min)
